# reaction-solver

./: .gitignore  Cargo.toml  program.mzn
problems/: feedback.chem  harder.chem  loop.chem  real.chem  simple.chem  test.chem  time.chem
src/: ast.rs  build.rs  grammar.lalrpop  grammar.rs  main.rs
